Huge update for new layout.
- Started using ActionBarSherlock for multiplatform ActionBar support.
- Changed most dialogs to regular activities.
- Removed the TimeoutActivity usage. Need better timeout implementation.
- Change from 8 space indentation (tab) to 4 space.